--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,5 +4,15 @@
 <%= form_for @review do |f| %>
 <%= f.label :rating %>
 <%= f.radio_button(:rating, 1) %>
+<%= f.label :rating %>
+<%= f.radio_button(:rating, 2) %>
+<%= f.label :rating %>
+<%= f.radio_button(:rating, 3) %>
+<%= f.label :rating %>
+<%= f.radio_button(:rating, 4) %>
+<%= f.label :rating %>
+<%= f.radio_button(:rating, 5) %>
+<%= f.label :comment, "Review" %>
+<%= f.text_area :comment %> 
 <%= f.submit %>
 <% end %>
