changed show page syntax

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,6 @@
   <%= @product.name %>
   <%= @product.description %>
   <%= @product.price %>
-  sold by: <%= @product.vendor.name %>
+  sold by: <%= @product.vendor.username %>
 
 </p>
