Working on show pages and index pages for vendor

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Product Detail Page</h1>
 <p>
-  <img src="" alt="">
+  <%= image_tag @product.photo_url %>
   <%= @product.name %>
   <%= @product.description %>
   <%= @product.price %>
