--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,30 +1,2 @@
-<h2>Add new product</h2>
-<%= form_for @product do | f | %>
-
-  <!-- Since vendor is creating new product, should be able to use their id from the URL -->
-
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.label :price %>
-  <%= f.text_field :price %>
-
-  <%= f.label :inventory %>
-  <%= f.select :inventory, ((0..100).map {|i| [i,i] }) %>
-
-  <%= f.label :description %>
-  <%= f.text_area :description, size: "60x12" %>
-
-  <%= f.label :photo_url %>
-  <%= f.url_field :photo_url %>
-
-  <!-- since this is a brand new item, it should be assumed that it is in the 'available' part of the lifecycle
-
-  <%= radio_button_tag(:lifecycle, "available") %>
-  <%= label_tag(:lifecycle, "avilable") %>
-  <%= radio_button_tag(:lifecycle, "unavailable") %>
-  <%= label_tag(:lifecycle, "unavailable") %> -->
-
-  <%= f.submit %>
-
-<% end %>
+<h2>New Product Form</h2>
+<%= render partial: "form" %>
