Created tests for category model and controller

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,5 +5,7 @@
   <%= @product.description %>
   <%= @product.price %>
   sold by: <%= @product.vendor.username %>
+  Categories:
+  <%= @product.categories.each do |category| print category end%>
 
 </p>
