--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,8 +6,6 @@
 
 <%= form_for @product do | f | %>
 
-  <!-- Since vendor is creating new product, should be able to use their id from the URL -->
-
   <%= f.label :name %>
   <%= f.text_field :name %>
 
@@ -25,14 +23,19 @@
 
   <%= f.hidden_field :lifecycle, value: "available" %>
 
+  <!-- Since vendor is creating new product, should be able to use their id from the URL -->
+  <%= f.hidden_field :vendor_id, value: 1 %>
+  <%= select_tag(:category_id, options_for_select(@product)) %>
 
-  <!-- since this is a brand new item, it should be assumed that it is in the 'available' part of the lifecycle
 
-  <%= radio_button_tag(:lifecycle, "available") %>
-  <%= label_tag(:lifecycle, "avilable") %>
-  <%= radio_button_tag(:lifecycle, "unavailable") %>
-  <%= label_tag(:lifecycle, "unavailable") %> -->
+  <!-- <div class="tag-wrapper">
+  <% @categories.each do | category | %>
+    <div class="tag">
+      <%= f.label category.name %>
+      <%= f.check_box :category_ids, @product.categories = category.id %>
+    </div>
+  <% end %>
+  </div> -->
 
   <%= f.submit %>
-
 <% end %>
