--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <main>
 <ul>
   <% @categories.each do |category| %>
-  <li><%= category.name %></li>
+  <li><%= link_to category.name, category_products_path(category.id) %></li>
   <% end %>
 </ul>
 </main>
