Added categories to products index view to help with testing

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,4 +3,7 @@
     <%= image_tag product.photo_url %>
       <%= link_to product.name, product_path(product.id) %>
       <%= product.price %>
+      <% product.categories.each do | category |  %>
+        <%= category.name %>
+      <% end %>
   <% end %>
