--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,23 @@
 <h1>Product Detail Page</h1>
 <p>
-  <%= image_tag @product.photo_url %>
-  <%= @product.name %>
-  <%= @product.description %>
-  <%= @product.price %>
-  sold by: <%= @product.vendor.username %>
-  Categories:
+  <ul>
+  <li>
+    <%= image_tag @product.photo_url %>
+  </li>
+  <li>
+    <%= @product.name %>
+  </li>
+  <li>
+    <%= @product.description %>
+  </li>
+  <li>
+    <%= @product.price %>
+  </li>
+    <li>
+      sold by: <%= link_to @product.vendor.username, vendor_path(@product.vendor.id) %>
+    </li>
+    Categories:
+  </ul>
   <ul>
   <% @product.categories.each do |category| %>
     <li> <%= category.name %> </li>
