--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,18 +1,18 @@
 <h1>Reviews</h1>
 <h3>Please rate this product</h3>
 
-<%= form_for @review do |f| %>
-<%= f.label :rating %>
-<%= f.radio_button(:rating, 1) %>
-<%= f.label :rating %>
+<%= form_for @review, method: :get, url: reviews_new_path do |f| %>
+<%= f.label :rating, value: 1 %>
+<%= f.radio_button(:rating, 1)%>
+<%= f.label :rating, value: 2 %>
 <%= f.radio_button(:rating, 2) %>
-<%= f.label :rating %>
+<%= f.label :rating, value: 3 %>
 <%= f.radio_button(:rating, 3) %>
-<%= f.label :rating %>
+<%= f.label :rating, value: 4 %>
 <%= f.radio_button(:rating, 4) %>
-<%= f.label :rating %>
+<%= f.label :rating, value: 5 %>
 <%= f.radio_button(:rating, 5) %>
 <%= f.label :comment, "Review" %>
-<%= f.text_area :comment %> 
+<%= f.text_area :comment %>
 <%= f.submit %>
 <% end %>
