--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,3 @@
 <h1>All Products</h1>
-  <% @products.each do |product| %>
-    <%= image_tag product.photo_url %>
-      <%= link_to product.name, product_path(product.id) %>
-      <%= product.price %>
-  <% end %>
+
+  <%= render partial: "list" %>
