--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
-  <section class="flash">
-    <% flash.each do |name, message| %>
-      <div class="<%= name %>"><%= message %></div>
-    <% end %>
-  </section>
+
   <body>
+    <nav>
+      <ul>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "All products", products_path %></li>
+        <li><%= link_to "Browse categories", categories_path %></li>
+        <li><%= link_to "Browse vendors", vendors_path %></li>
+        <li><%= link_to "[Sign in]", root_path %></li>
+        <li><%= link_to "[Your account]", root_path %></li>
+        <li><%= link_to "[Cart]", root_path %></li>
+
+      </ul>
+    </nav>
     <section class="flash">
       <% flash.each do |name, message| %>
         <div class="<%= name %>"><%= message %></div>
       <% end %>
     </section>
-    
+
     <%= yield %>
   </body>
 </html>
