Add new category link to category index

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,4 +4,6 @@
   <li><%= link_to category.name, category_products_path(category.id) %></li>
   <% end %>
 </ul>
+
+<%= link_to "Add new category", new_category_path %>
 </main>
