--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <li><%= link_to "Browse categories", categories_path %></li>
         <li><%= link_to "Browse vendors", vendors_path %></li>
         <li><%= link_to "[Sign in]", root_path %></li>
-        <li><%= link_to "[Your account]", root_path %></li>
+        <li><%= link_to "[Your account]", vendor_account_path(Vendor.find(1).id)%></li> <!--eventually replaced by session id -->
         <li><%= link_to "[Cart]", root_path %></li>
 
       </ul>
