--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Reviews</h1>
 <h3>Please rate this product</h3>
 
-<%= form_for @review, method: :get, url: reviews_new_path do |f| %>
+<%= form_for @review, method: :post, url: product_reviews_path do |f| %>
 <%= f.label :rating, value: 1 %>
 <%= f.radio_button(:rating, 1)%>
 <%= f.label :rating, value: 2 %>
@@ -14,5 +14,6 @@
 <%= f.radio_button(:rating, 5) %>
 <%= f.label :comment, "Review" %>
 <%= f.text_area :comment %>
+<%= f.hidden_field :product_id, value: @product.id %>
 <%= f.submit %>
 <% end %>
