--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,15 @@
         <li><%= link_to "All products", products_path %></li>
         <li><%= link_to "Browse categories", categories_path %></li>
         <li><%= link_to "Browse vendors", vendors_path %></li>
-        <li><%= link_to "[Sign in]", root_path %></li>
+
+      <li>
+        <% unless session[:vendor_id] %>
+        <%= link_to "Sign in", "/auth/github" %>
+        <% else %>
+        <%= link_to "Sign out", logout_path, method: :delete %>
+        <% end %>
+      </li>
+
         <li><%= link_to "[Your account]", vendor_account_path(Vendor.find(1).id)%></li> <!--eventually replaced by session id -->
         <li><%= link_to "[Cart]", root_path %></li>
 
