--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,3 +27,5 @@
 </p>
 <%= link_to "Delete", product_path(@product.id), data: { confirm: "Are you sure you want to delete this product?"
 }, method: :delete %>
+
+<%= link_to "Add to Cart", product_add_to_cart_path %>
