made adjustments to add cart and detail page to show quantity

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       </li>
 
         <li><%= link_to "[Your account]", vendor_account_path(Vendor.find(1).id)%></li> <!--eventually replaced by session id -->
-        <li><%= link_to "[Cart]", root_path %></li>
+        <li><%= link_to "[Cart]", order_path(Order.last.id) %></li>
 
       </ul>
     </nav>
