--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,18 +7,18 @@
     <th>Price</th>
   </tr>
   <% if @order.status == "pending" %>
-  <% @order.products.each do |product| %>
+  <% @order.order_products.each do |order_product| %>
   <tr>
-    <td><%= product.name %></td>
+    <td><%= Product.find(order_product.product_id).name %></td>
     <td>
-      <%= link_to "+", product_add_to_cart_path(product.id), method: :post %>
-      <%= product.quantity %>
-      <%= link_to "-", product_remove_from_cart_path(product.id), method: :post %></td>
-    <td><%= product.price * product.quantity %></td>
+      <%= link_to "+", product_add_to_cart_path(order_product.product_id), method: :post %>
+      <%= order_product.quantity %>
+      <%= link_to "-", product_remove_from_cart_path(order_product.product_id), method: :post %></td>
+    <td><%= Product.find(order_product.product_id).price * order_product.quantity %></td>
   </tr>
   <% end %>
   <% end %>
-
+</table>
 <% if @order.status != "pending" %>
   <p>"you have not added any items to your cart"</p>
 <% end %>
