--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,22 @@
 
 
-<h1>All Products</h1>
+<h1><%= @header %></h1>
 
-  <%= render partial: "list" %>
+<ul>
+  <% @products.each do |product| %>
+    <%= image_tag product.photo_url %>
+    <li>
+       <%= link_to product.name, product_path(product.id) %>
+    </li>
+    <li>
+      <%= product.price %>
+    </li>
+    <li>
+      <% product.categories.each do | category |  %>
+        <%= category.name %>
+      <% end %>
+    </li>
+
+  <% end %>
+
+</ul>
