--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,7 +19,8 @@
   <%= f.text_area :description, size: "60x12" %>
 
   <%= f.label :photo_url %>
-  <%= f.url_field :photo_url %>
+  <!-- <%= f.url_field :photo_url %> -->
+  <%= f.text_field :photo_url %>
 
   <%= f.hidden_field :lifecycle, value: "available" %>
   <%= f.hidden_field :vendor_id, value: session[:vendor_id] %>
