--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,12 @@
         <%= link_to "Sign in", "/auth/github" %>
         <% else %>
         <%= link_to "Sign out", logout_path, method: :delete %>
+        <li><%= link_to "[Your account]", vendor_account_path(session[:vendor_id])%></li> <!--eventually replaced by session id -->
+
         <% end %>
       </li>
 
-        <li><%= link_to "[Your account]", vendor_account_path(Vendor.find(1).id)%></li> <!--eventually replaced by session id -->
-        <li><%= link_to "[Cart]", order_path(Order.last.id) %></li>
+        <li><%= link_to "[Cart]", order_path(session[:order_id]) %></li>
 
       </ul>
     </nav>
