--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -1,10 +1,5 @@
 <%= Vendor.name %>
-Total Revenue by status
-Total number of orders by status
-Filter orders displaed by status
-Link to each individual
-<% @manage_orders.each do | order | %>
-<%= order.id %>
+
 <table>
   <tr>
     <th>Order</th>
@@ -15,14 +10,16 @@ Link to each individual
     <th>Subtotal</th>
     <th>Order Status</th>
     <th>Your Status</th>
-    <th>Edit Statuse</th>
+    <th>Edit Status</th>
   </tr>
+  <% @manage_orders.each do | order | %>
   <tr>
     <td><%= order.order_id %></td>
     <td><%= order.created_at %></td>
     <td><%=order.product_id %></td>
-    <td><%=order. %></td>
+    <td><%=order.price%></td>
     <td><%=order.order_id %></td>
     <td><%=order.order_id %></td>
   </tr>
+  <% end %>
 </table>
