--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -1,4 +1,6 @@
-<%= Vendor.name %>
+<!-- <h1>Welcome, <%= Vendor.find_by_id(session[:vendor_id])%>! </h1> -->
+<h1>Welcome, <%= Vendor.find(1).username%>! </h1>
+
 
 <table>
   <tr>
@@ -12,7 +14,7 @@
     <th>Your Status</th>
     <th>Edit Status</th>
   </tr>
-  <% @manage_orders.each do | order | %>
+  <% @vendor_products.each do | order | %>
   <tr>
     <td><%= order.order_id %></td>
     <td><%= order.created_at %></td>
