--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -14,14 +14,17 @@
     <th>Your Status</th>
     <th>Edit Status</th>
   </tr>
-  <% @vendor_products.each do | order | %>
+  <% @vendor_products.each do | order_product | %>
   <tr>
-    <td><%= order.order_id %></td>
-    <td><%= order.created_at %></td>
-    <td><%=order.product_id %></td>
-    <td><%=order.price%></td>
-    <td><%=order.order_id %></td>
-    <td><%=order.order_id %></td>
+    <td><%= link_to order_product.order_id, order_path(order_product.order_id)%></td>
+    <td><%= order_product.created_at%></td>
+    <td><%= Product.find_by_id(order_product.product_id).name%></td>
+    <td><%= Product.find_by_id(order_product.product_id).price%></td>
+    <td><%= order_product.quantity%></td>
+    <td><%= order_product.quantity * Product.find_by_id(order_product.product_id).price %></td>
+    <td><%= Order.find_by_id(order_product.order_id).status%></td>
+    <td>?</td>
+    <td>?</td>
   </tr>
   <% end %>
 </table>
