--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -1,5 +1,5 @@
 <!-- <h1>Welcome, <%= Vendor.find_by_id(session[:vendor_id])%>! </h1> -->
-<h1>Welcome, <%= Vendor.find(1).username%>! </h1>
+<h1>Welcome, <%= Vendor.find_by_id(params[:vendor_id]).username%>! </h1>
 
 
 <table>
