--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -25,7 +25,7 @@
   </tr>
   <% @vendor_products.each do | order_product | %>
   <tr>
-    <td><%= link_to order_product.order_id, order_path(order_product.order_id)%></td>
+    <td><%= link_to order_product.order_id, vendor_order_details_path(params[:vendor_id], order_product.order_id)%></td>
     <td><%= order_product.created_at%></td>
     <td><%= Product.find_by_id(order_product.product_id).name%></td>
     <td><%= Product.find_by_id(order_product.product_id).price%></td>
