--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -1,6 +1,6 @@
 <!-- <h1>Welcome, <%= Vendor.find_by_id(session[:vendor_id])%>! </h1> -->
-<h1>Welcome, <%= Vendor.find_by_id(params[:vendor_id]).username%>! </h1>
-<h3>Total Revenue: <%= Vendor.find_by_id(params[:vendor_id]).total_rev %> </h3>
+<h1>Welcome, <%= @vendor.username%>! </h1>
+<h3>Total Revenue: <%= @vendor.total_rev %> </h3>
 <h3>View Orders By Status</h3>
 <ul>
   <li>Pending</li>
@@ -25,7 +25,7 @@
   </tr>
   <% @vendor_products.each do | order_product | %>
   <tr>
-    <td><%= link_to order_product.order_id, vendor_order_details_path(params[:vendor_id], order_product.order_id)%></td>
+    <td><%= link_to order_product.order_id, order_details_path(order_product.order_id)%></td>
     <td><%= order_product.created_at%></td>
     <td><%= Product.find_by_id(order_product.product_id).name%></td>
     <td><%= Product.find_by_id(order_product.product_id).price%></td>
