--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -27,7 +27,7 @@
   <tr>
     <td><%= link_to order_product.order_id, order_details_path(order_product.order_id)%></td>
     <td><%= order_product.created_at%></td>
-    <td><%= Product.find_by_id(order_product.product_id).name%></td>
+    <td><%= link_to Product.find_by_id(order_product.product_id).name, product_path(order_product.product_id)%></td>
     <td><%= Product.find_by_id(order_product.product_id).price%></td>
     <td><%= order_product.quantity%></td>
     <td><%= order_product.quantity * Product.find_by_id(order_product.product_id).price %></td>
