--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,10 +59,14 @@ a {
   left: 10%
 }
 
-table.center {
+.center {
   margin-left:auto;
   margin-right:auto;
   width: 80%;
+}
+
+table.center {
+  border: 1px solid gray
 }
 
 #header {
@@ -71,6 +75,7 @@ table.center {
   width: 80%;
 }
 
-#add-prod {
-  border: #E9B000
+#center {
+  text-align: center;
+  color: #E9B000
 }
