--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,11 @@
-<h2>Featured Products</h2>>
+<h2>Featured Products</h2>
+
+<div class="row">
+  <% @top_products.each do | product | %>
+    <section class="small-1 medium-4 columns">
+      <%= image_tag product.photo_url %>
+      <h4><%= product.name %> </h4>
+      <h5><strong>$<%= product.price %></strong></h5>
+    </section>
+  <% end %>
+</div>
