--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,24 +1,11 @@
+<h2><%= @header %></h2>
 
-
-<h1><%= @header %></h1>
-
-<ul>
-  <% @products.each do |product| %>
-
-    <% if product.lifecycle != "unavailable" %>
+<div class="row">
+  <% @products.each do | product | %>
+    <section class="small-1 medium-4 columns">
       <%= image_tag product.photo_url %>
-      <li>
-         <%= link_to product.name, product_path(product.id) %>
-      </li>
-      <li>
-        <%= product.price %>
-      </li>
-      <li>
-        <% product.categories.each do | category |  %>
-          <%= category.name %>
-        <% end %>
-      </li>
-
-    <% end %>
+      <h4><%= product.name %> </h4>
+      <h5><strong>$<%= product.price %></strong></h5>
+    </section>
   <% end %>
-</ul>
+</div>
