--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
   <% @top_products.each do | product | %>
     <section class="small-1 medium-4 columns">
       <%= image_tag product.photo_url %>
-      <h4><%= product.name %> </h4>
+      <h4><%= link_to product.name, product_path(product.id) %> </h4>
       <h5><strong>$<%= product.price %></strong></h5>
     </section>
   <% end %>
