--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,32 +1,30 @@
-<h1>Product Detail Page</h1>
 
-  <ul>
-    <li>
-      <%= image_tag @product.photo_url %>
-    </li>
-    <li>
-      <%= @product.name %>
-    </li>
-    <li>
-      <%= @product.description %>
-    </li>
-    <li>
-      <%= @product.price %>
-    </li>
-    <li>
-      quantity available: <%= @product.inventory %>
-    </li>
-      <li>
-        sold by: <%= link_to @product.vendor.username, vendor_products_path(@product.vendor.id) %>
-      </li>
-    </ul>
+<div class="row">
+  <section class="small-1 medium-4 columns">
+    <%= image_tag @product.photo_url %>
+  </section>
+  <section class="small-1 medium-8 columns">
+    <h2><%= @product.name %></h2>
+    <p><strong>by <%= link_to @product.vendor.username, vendor_products_path(@product.vendor.id) %></strong></p>
+    <h5><strong><%= @product.price %></strong></h5>
+    <br/>
+    <p><%= @product.description %></p>
+    <p><emphasis>
+      <% @product.categories.each do | category | %>
+      <%= link_to category.name, category_products_path(category.id) %>
+      <% end %>
+    </emphasis></p>
+    <%= link_to "Add to Cart", product_add_to_cart_path(params[:id]), method: :post, :class => "button" %>
+    <p>QTY: <%= @product.inventory %></p>
+  </section>
+</div>
 
-  <h3>Categories:</h3>
+  <!-- <h3>Categories:</h3>
   <ul>
     <% @product.categories.each do |category| %>
       <li> <%= category.name %> </li>
     <% end %>
-  </ul>
+  </ul> -->
 
   <h3>Reviews:</h3>
   <% if @product.reviews.empty? %>
@@ -39,5 +37,3 @@
     <%= link_to "Review this product!", new_product_review_path(@product.id) %>
     <% end %>
   </p>
-
-<%= link_to "Add to Cart", product_add_to_cart_path(params[:id]), method: :post%>
