--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,21 @@
-<h2>Featured Products</h2>
-
-<div class="row">
-  <% @top_products.each do | product | %>
-    <section class="small-12 medium-4 columns">
-      <%= image_tag product.photo_url %>
-      <h4><%= link_to product.name, product_path(product.id) %> </h4>
-      <h5><strong>$<%= product.price %></strong></h5>
-    </section>
-  <% end %>
+<div class="marketing-site-hero">
+  <div class="marketing-site-hero-content">
+    <h1>Yeti Snowcone Agency</h1>
+    <p class="subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
+    <a href="#" class="round button">learn more</a>
+  </div>
 </div>
+
+<main>
+  <h2>Featured Products</h2>
+
+  <div class="row">
+    <% @top_products.each do | product | %>
+      <section class="small-12 medium-4 columns">
+        <%= image_tag product.photo_url %>
+        <h4><%= link_to product.name, product_path(product.id) %> </h4>
+        <h5><strong>$<%= product.price %></strong></h5>
+      </section>
+    <% end %>
+  </div>  
+</main>
