--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,22 @@
-<h2><%= @header %></h2>
-
-<div class="row">
-  <% @products.each do | product | %>
-    <section class="small-12 medium-4 columns">
-      <%= image_tag product.photo_url %>
-      <h4><%= link_to product.name, product_path(product.id) %> </h4>
-      <h5><strong>$<%= product.price %></strong></h5>
-    </section>
-  <% end %>
+<div class="hero-image">
+  <%= image_tag @image %>
+  <div class="hero-content">
+    <h2><h2><%= @header %></h2></h2>
+    <!-- <h3 class="subheader"><%= @description %></h3> -->
+    <% if params[:vendor_id] %>
+      <a href="#" class="button">Contact</a>
+    <% end %>
+  </div>
 </div>
+
+<main>
+  <div class="row">
+    <% @products.each do | product | %>
+      <section class="small-12 medium-4 columns">
+        <%= image_tag product.photo_url %>
+        <h4><%= link_to product.name, product_path(product.id) %> </h4>
+        <h5><strong>$<%= product.price %></strong></h5>
+      </section>
+    <% end %>
+  </div>
+</main>
