Added placeholder description for category and vendor. Need to add to model through migration eventually

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag @image %>
   <div class="hero-content">
     <h2><h2><%= @header %></h2></h2>
-    <!-- <h3 class="subheader"><%= @description %></h3> -->
+    <h4><%= @description %></h4>
     <% if params[:vendor_id] %>
       <a href="#" class="button">Contact</a>
     <% end %>
