--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,7 +32,7 @@
         <p><%= review.comment %></p>
         <p>-
           <% review.rating.times do %>
-          <i class="fa fa-star" aria-hidden="true"></i>
+          < <i class="fa fa-star" aria-hidden="true"></i>
           <% end %>
         </p>
         <% end %>
