Center header and main navigation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,27 @@ main, header, footer {
    padding: 45px;
  }
 
+h1#title, ul.primary {
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+ul.primary li {
+  display: inline-block;
+  padding: 0px 30px;
+}
+
+li.highlight a {
+  color: #E24E42;
+}
+
+li.highlight a:hover {
+  color: gray;
+}
+
 .prod-img-list {
   height: 200px;
   width: 200px;
@@ -28,11 +49,11 @@ main, header, footer {
 
 img.top-image {
   height: 350px;
-  width: 100%
+  width: 100%;
 }
 
 a {
-  color: gray
+  color: gray;
 }
 
 .manage {
@@ -55,7 +76,7 @@ a {
 
 .block {
   /*display: block;*/
-  left: 10%
+  left: 10%;
 }
 
 .center {
@@ -65,7 +86,7 @@ a {
 }
 
 table.center {
-  border: 1px solid gray
+  border: 1px solid gray;
 }
 
 #header {
@@ -76,9 +97,9 @@ table.center {
 
 #center {
   text-align: center;
-  color: #E9B000
+  color: #E9B000;
 }
 
 .addprod {
-  background-color: #E9B000
+  background-color: #E9B000;
 }
