Almost the layout for the header and navigation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,10 @@ main, header, footer {
    padding: 45px;
  }
 
+h1#title {
+  padding-bottom: 20px;
+}
+
 h1#title, ul.primary {
   text-align: center;
 }
