--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,25 @@
 
 <body>
   <header>
-  <h1 id="title">Indulge</h1>
+  <div>
+
+    <h1 id="title">Indulge</h1>
+    <nav>
+        <ul class="secondary">
+          <% if session[:vendor_id] %>
+                <li><%= link_to "Your account", vendor_account_path%></li>
+          <% end %>
+          <li>
+            <% unless session[:vendor_id] %>
+            <%= link_to "Sign in", "/auth/github" %>
+            <% else %>
+            <%= link_to "Sign out", logout_path, method: :delete %>
+            <% end %>
+          </li>
+          <li class="highlight"><%= link_to "Cart", order_cart_path(session[:order_id]) %></li>
+        </ul>
+      </nav>
+    </div>
 
   <nav class="clearfix">
     <ul class="primary">
@@ -25,22 +43,7 @@
     </ul>
   </nav>
 
-  <nav>
-      <ul class="menu secondary">
-        <% if session[:vendor_id] %>
-              <li><%= link_to "Your account", vendor_account_path%></li>
-        <% end %>
-        <li>
-          <% unless session[:vendor_id] %>
-          <%= link_to "Sign in", "/auth/github" %>
-          <% else %>
-          <%= link_to "Sign out", logout_path, method: :delete %>
 
-          <% end %>
-        </li>
-        <li class="highlight"><%= link_to "Cart", order_cart_path(session[:order_id]) %></li>
-      </ul>
-    </nav>
 </header>
 
   <section class="flash">
