--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -39,7 +39,7 @@
         </fieldset>
 
         <%= f.hidden_field :product_id, value: @product.id %></p>
-        <div class="button success"><%= f.submit %></div>
+      <%= f.submit class:"button success" %>
         <% end %>
       </div>
     </section>
