changed some formatting stuff for accounts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,8 +52,10 @@ li.highlight a:hover {
 
 
 img.top-image {
-  height: 350px;
-  width: 100%;
+  /*margin-left:auto;
+  margin-right:auto;*/
+  display: block;
+  margin: 0 auto;
 }
 
 a {
@@ -70,12 +72,9 @@ a {
 }
 
 .welcome {
-  position: absolute;
-  top: 35%;
-  left: 20%;
-  font-size: 100px;
-  color: #E9B000;
-  font-family: 'Pacifico', cursive;
+  text-align: center;
+  color: darkgray;
+  font-family: pacifico
 }
 
 .block {
