Styling on review form

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,9 +31,10 @@
         <h5><strong><%= review.header %></strong></h5>
         <p><%= review.comment %></p>
         <p>-
-          <% review.rating.times do %>
-          < <i class="fa fa-star" aria-hidden="true"></i>
-          <% end %>
+          <%# review.rating.times do %>
+          <%= review.rating %>
+          <!-- < <i class="fa fa-star" aria-hidden="true"></i> -->
+          <%# end %>
         </p>
         <% end %>
         <%= link_to "Review this product!", new_product_review_path(@product.id), :class => "button" %>
