--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -26,9 +26,9 @@
       <td><%= link_to order_product.order_id, order_details_path(order_product.order_id)%></td>
       <td><%= order_product.created_at%></td>
       <td><%= link_to Product.find_by_id(order_product.product_id).name, product_path(order_product.product_id)%></td>
-      <td>$<%= Product.find_by_id(order_product.product_id).price%>0</td>
+      <td>$<%= number_with_precision(Product.find_by_id(order_product.product_id).price, precision: 2)%>0</td>
       <td><%= order_product.quantity%></td>
-      <td>$<%= order_product.quantity * Product.find_by_id(order_product.product_id).price %>0</td>
+      <td>$<%= number_with_precision(order_product.quantity * Product.find_by_id(order_product.product_id).price, precision: 2) %></td>
       <td><%= Order.find_by_id(order_product.order_id).status%></td>
       <td><%= order_product.ship_status %></td>
       <td><%= link_to "Update Status", update_ship_path(order_product.id), method: :post %></td>
@@ -61,7 +61,7 @@
         <td><%= link_to Product.find_by_id(order_product.product_id).name, product_path(order_product.product_id)%></td>
         <td>$<%= Product.find_by_id(order_product.product_id).price%>0</td>
         <td><%= order_product.quantity%></td>
-        <td>$<%= order_product.quantity * Product.find_by_id(order_product.product_id).price %>0</td>
+        <td>$<%= order_product.quantity * Product.find_by_id(order_product.product_id).price %></td>
         <td><%= Order.find_by_id(order_product.order_id).status%></td>
         <td><%= order_product.ship_status %></td>
         <td><%= link_to "Update Status", update_ship_path(order_product.id), method: :post %></td>
@@ -95,7 +95,7 @@
           <td><%= link_to Product.find_by_id(order_product.product_id).name, product_path(order_product.product_id)%></td>
           <td>$<%= Product.find_by_id(order_product.product_id).price%>0</td>
           <td><%= order_product.quantity%></td>
-          <td>$<%= order_product.quantity * Product.find_by_id(order_product.product_id).price %>0</td>
+          <td>$<%= order_product.quantity * Product.find_by_id(order_product.product_id).price %></td>
           <td><%= Order.find_by_id(order_product.order_id).status%></td>
           <td><%= order_product.ship_status %></td>
           <td><%= link_to "Update Status", update_ship_path(order_product.id), method: :post %></td>
