--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
     </section>
     <section class="small-12 medium-8 columns">
       <h2><%= @product.name %></h2>
-      <h3>$<%= @product.price %></h3>
+      <h3>$<%= number_with_precision(@product.price, precision: 2) %></h3>
       <br/>
       <p><strong>by <%= link_to @product.vendor.username, vendor_products_path(@product.vendor.id) %></strong></p>
       <p><%= @product.description %></p>
